# surfai

./: .env  .gitignore  AGENTS.md  README.md  docker-compose.yml  go.mod  go.sum  main.py  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml
.cursor/automations/: README.md  agent-instructions.md  review-on-dev.prefill.json  review-on-local-commit.hook.example.sh  review-on-push.prefill.json
.cursor/commands/: deliver-ready.md  grade-a-plus.md
.cursor/rules/: api-layer.mdc  frontend-contract.mdc  workflow-layer.mdc
app/: config.py  dependencies.py  main.py
app/api/: mappers.py
app/domain/: errors.py  models.py  ports.py  validation.py
app/infrastructure/: file_reader.py  http_client.py  retry_policy.py
app/services/: executor.py  validator.py  workflow_service.py
cmd/api/: main.go
cmd/worker/: main.go
docs/: alternative_review.md  code_review_summary.md  design.md  design_overview.md  final_plan.md  final_requierments.md  final_requirements.md  final_review.md  general_review.md  handoff.md  initial_requirements.md  manual_tests.md  plan.md  progress.md  qa_review.md  review_loop_state.md  reviewed_requierments.md
domain/: errors.go  order.go  repository.go  seat.go
internal/api/: integration_test.go  order_integration_test.go  router.go
internal/app/: application.go  bootstrap.go  listen.go  listen_test.go  reconcile.go  reconcile_test.go
internal/web/: embed.go  router.go
tests/: conftest.py
tests/e2e/: booking-flow.spec.ts  inventory.spec.ts  payment-attempts.spec.ts  payment.spec.ts  timer-expiry.spec.ts
(+79 files in other folders)
